[project]
name = "nodeman"
version = "0.0.0"
description = "DNS TAPIR Node Manager"
authors = [{name="Jakob Schlyter", email = "jakob@kirei.se"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dnstapir[opentelemetry,keymanager]@git+https://github.com/dnstapir/python-dnstapir.git#v1.5.1",
    "argon2-cffi>=23.1.0",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "jwcrypto>=1.5.6",
    "mongoengine>=0.29.1",
    "namesgenerator>=0.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "ttlru-map>=1.1.0",
    "uvicorn>=0.34.0",
    "werkzeug>=3.1.3",
]


[project.urls]
repository = "https://github.com/dnstapir/nodeman.git"

[project.scripts]
nodeman_server = "nodeman.server:main"
nodeman_client = "nodeman.client:main"

[tool.setuptools]
packages = [ "nodeman" ]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.7.0",
    "mongomock>=4.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-httpx>=0.35.0",
    "pytest-ruff>=0.4.1",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
    "nodeman", "dnstapir"
]
extra-standard-library = [
    "tomllib",
]
combine-as-imports = true
split-on-trailing-comma = false
