[project]
name = "nodeman"
dynamic = ["version"]
description = "DNS TAPIR Node Manager"
authors = [{name="Jakob Schlyter", email = "jakob@kirei.se"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dnstapir[opentelemetry,keymanager]",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "jwcrypto>=1.5.7",
    "mongoengine>=0.29.3",
    "namesgenerator>=0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
dnstapir = { git = "https://github.com/dnstapir/python-dnstapir.git", tag = "v1.5.1" }

[project.urls]
repository = "https://github.com/dnstapir/nodeman.git"

[project.scripts]
nodeman_server = "nodeman.server:main"
nodeman_client = "nodeman.client:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "mongomock>=4.3.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "pytest-ruff>=0.5",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
    "nodeman", "dnstapir"
]
extra-standard-library = [
    "tomllib",
]
combine-as-imports = true
split-on-trailing-comma = false
